Fixed mobile footer on smaller devices

--- a/css/styles.css
+++ b/css/styles.css
@@ -157,7 +157,7 @@ a.button {
     }
 
     .gov {
-        
+
     }
 }
 
@@ -365,10 +365,14 @@ footer {
     }
 }
 
-@media (max-width:370px) {
-    .socials,
-    .payments {
-        visibility: hidden;
+@media (max-width:360px) {
+    .payments i,
+    .socials i {
+        padding: 2px;
+    }
+
+    .socials p {
+        font-size: 10px;
     }
 }
 
